--- a/src/components/AddFields/AddFields.css
+++ b/src/components/AddFields/AddFields.css
@@ -7,7 +7,7 @@
     height: 100%;
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    gap: 20px;
 }
 
 .form {
